@@ -8,7 +8,6 @@ import java.util.*;
 import org.junit.*;
 
 import java.util.stream.*;
-import static java.util.stream.Collectors.toList;
 
 public class PlayerTest {
 
@@ -17,7 +16,7 @@ public class PlayerTest {
         var strategy = new MaxCard();
         int maxCard = 40;
         int prizeCard = 10;
-        var cards = IntStream.range(1,5).boxed().collect(toList());
+        var cards = IntStream.range(1,5).boxed().toList();
         var hand = new Hand(cards);
         var player = new Player("Randy", strategy, maxCard, hand);
         var bid = player.getBid(prizeCard);
@@ -25,7 +24,7 @@ public class PlayerTest {
         assertEquals(3, player.getNumCardsInHand());
         assertEquals(1, player.getPlayerStats().numRoundsWon());
         
-        var newCards = IntStream.range(6,8+1).boxed().collect(toList());
+        var newCards = IntStream.range(6,8+1).boxed().toList();
         var newHand = new Hand(newCards);
         
         // test
@@ -40,7 +39,7 @@ public class PlayerTest {
         var strategy = new MaxCard();
         int maxCard = 40;
         int prizeCard = 10;
-        var cards = IntStream.range(1,5).boxed().collect(toList());
+        var cards = IntStream.range(1,5).boxed().toList();
         var hand = new Hand(cards);
         var player = new Player("Randy", strategy, maxCard, hand);
 
